--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
   "private": true,
   "dependencies": {
     "materialize-css": "^1.0.0",
+    "moment": "^2.24.0",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
-    "react-scripts": "3.1.2"
+    "react-moment": "^0.9.2",
+    "react-redux": "^7.1.1",
+    "react-scripts": "3.1.2",
+    "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,5 +41,5 @@
     "concurrently": "^4.1.2",
     "json-server": "^0.15.1"
   },
-  "proxy": "https://localhost:5000"
+  "proxy": "http://localhost:5000"
 }
